Fixed table rows vertical align

--- a/manager/assets/css/app.scss
+++ b/manager/assets/css/app.scss
@@ -15,6 +15,13 @@ main {
     }
 }
 
+.table {
+    th,
+    td {
+        vertical-align: middle;
+    }
+}
+
 .footer {
     background-color: #f5f5f5;
 
